Add supported chains no-op endpoint
